--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
   			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
   			<version>2.1.0</version>
 		</dependency>
+
+		<!-- spring-boot-starter-validation -->
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-validation</artifactId>
+    		<version>3.5.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
